# taller_github_2

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: index.html
frontend/src/: App.jsx  index.css
