[project]
name = "backend"
version = "0.1.0"
description = "FastAPI JWT demo service"
authors = [
    {name = "GitHub Copilot"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pyjwt (>=2.12.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
